--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -12,6 +12,35 @@
     <link rel="shortcut icon" href="favicon.ico" />
     <link rel="manifest" href="manifest.webapp" />
     <!-- jhipster-needle-add-resources-to-root - JHipster will add new resources here -->
+
+    <style>
+        body {
+            background-image: url("http://bit.ly/2gPLxZ4");
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            overflow: hidden;
+            font-family: Raleway, Open Sans, Droid Sans, Roboto, arial, sans-serif;
+        }
+        #containerBlur {
+            width: 100%;
+            height: 100%;
+            background: inherit;
+            position: absolute;
+            border-radius: 8px;
+        }
+        #containerBlur:before {
+            width: 100%;
+            height: 100%;
+            content: "";
+            position: absolute;
+            bottom: 0;
+            right: 0;
+            overflow: hidden;
+            background: inherit;
+            filter: blur(10px);
+        }
+    </style>
 </head>
 <body>
     <!--[if lt IE 9]>
